# test-python-v2

./: .gitignore  Dockerfile  README.md  README.pypi.test.md  aws.yaml  dev.sh  main.dockerfile  main.py  nitric.yaml  pyproject.toml  pyproject.toml.local
nitric/: client.py
